--- a/task-1.html
+++ b/task-1.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 1</title>
-    <link rel="stylesheet" href="./css/common.css" />
-  </head>
-  <body>
-    <p><a href="./index.html">Go back</a></p>
 
-    <ul id="categories">
-      <li class="item">
-        <h2>Animals</h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Task 1</title>
+  <link rel="stylesheet" href="./css/common.css" />
+</head>
 
-        <ul>
-          <li>Cat</li>
-          <li>Hamster</li>
-          <li>Horse</li>
-          <li>Parrot</li>
-        </ul>
-      </li>
-      <li class="item">
-        <h2>Products</h2>
+<body>
+  <p><a href="./index.html">Go back</a></p>
 
-        <ul>
-          <li>Bread</li>
-          <li>Prasley</li>
-          <li>Cheese</li>
-        </ul>
-      </li>
-      <li class="item">
-        <h2>Technologies</h2>
+  <ul id="categories">
+    <li class="item">
+      <h2 class="item-header">Animals</h2>
 
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Node.js</li>
-        </ul>
-      </li>
-    </ul>
+      <ul class="categories-list">
+        <li class="categories-item">Cat</li>
+        <li class="categories-item">Hamster</li>
+        <li class="categories-item">Horse</li>
+        <li class="categories-item">Parrot</li>
+      </ul>
+    </li>
+    <li class="item">
+      <h2 class="item-header">Products</h2>
 
-    <script src="./js/task-1.js" type="module"></script>
-  </body>
+      <ul class="categories-list">
+        <li class="categories-item">Bread</li>
+        <li class="categories-item">Prasley</li>
+        <li class="categories-item">Cheese</li>
+      </ul>
+    </li>
+    <li class="item">
+      <h2 class="item-header">Technologies</h2>
+
+      <ul class="categories-list">
+        <li class="categories-item">HTML</li>
+        <li class="categories-item">CSS</li>
+        <li class="categories-item">JavaScript</li>
+        <li class="categories-item">React</li>
+        <li class="categories-item">Node.js</li>
+      </ul>
+    </li>
+  </ul>
+
+  <script src="./js/task-1.js" type="module"></script>
+</body>
+
 </html>
