--- a/task-4.html
+++ b/task-4.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 4</title>
-    <link rel="stylesheet" href="./css/common.css" />
-  </head>
-  <body>
-    <p><a href="./index.html">Go back</a></p>
 
-    <form class="login-form">
-      <label>
-        Email
-        <input type="email" name="email" />
-      </label>
-      <label>
-        Password
-        <input type="password" name="password" />
-      </label>
-      <button type="submit">Login</button>
-    </form>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Task 4</title>
+  <link rel="stylesheet" href="./css/common.css" />
+</head>
 
-    <script src="./js/task-4.js" type="module"></script>
-  </body>
+<body>
+  <p><a href="./index.html">Go back</a></p>
+
+  <form class="login-form">
+    <label class="form-label">
+      Email
+      <input class="form-text" type="email" name="email" />
+    </label>
+    <label class="form-label">
+      Password
+      <input class="form-text" type="password" name="password" />
+    </label>
+    <button class="form-btn" type="submit">Log in</button>
+  </form>
+
+  <script src="./js/task-4.js" type="module"></script>
+</body>
+
 </html>
